<resources>
    <string name="app_name">Octanagem</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_loja">Loja</string>
    <string name="menu_carteira">Carteirinha</string>
    <string name="menu_socio">Seja Sócio</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login_">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="privacy_policy">Políticas de privacidade </string>
    <string name="privacy_policy_frag_title">Políticas de privacidade</string>
    <string name="item_privacy_policy">Políticas de privacidade</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_loja_fragment">LojaFragment</string>
    <string name="title_activity_card_fragment">CardFragment</string>
    <string name="title_activity_home_fragment">HomeFragment</string>

    <string name="profile_nome">Nome</string>
    <string name="profile_cpf">CPF</string>
    <string name="profile_rg">RG</string>
    <string name="profile_nasci">Nascimento</string>
    <string name="profile_curso">Curso</string>
    <string name="title_activity_socio_fragment">SocioFragment</string>
    <string name="menu_parceiros">Parceiros</string>
    <string name="title_activity_maps">Map</string>


</resources>
