<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/socio"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_socio"
            android:visible="true"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_loja"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_loja" />

        <item
            android:id="@+id/nav_carteira"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_carteira"
            android:visible="false"/>
        <item
            android:id="@+id/nav_carrinho"
            android:icon="@drawable/ic_menu_manage"
            android:title="Carrinho" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_parceiros"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_parceiros" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />

        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_login"
        android:title="@string/menu_logout" />

</menu>
